src/objects/echosign_dev1__EchoSign_User_Sync_Result__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Current_Group_Name__c</fullName>
        <label>Current Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Job_Id__c</fullName>
        <label>Job ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Prior_Group_Name__c</fullName>
        <label>Prior Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__User_Full_Name__c</fullName>
        <label>User Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Sync Result</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>User Sync Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Sync Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>